--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,18 @@
 	<groupId>com.scort.terminal</groupId>
 	<artifactId>dm3270</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
+	<scm>
+		<connection>scm:git:https://github.com:Neticoa/dm3270.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com:Neticoa/dm3270.git</developerConnection>
+		<url>https://github.com:Neticoa/dm3270</url>
+		<tag>HEAD</tag>
+	</scm>
 	<dependencies>
 		<dependency>
 			<groupId>org.xerial</groupId>
 			<artifactId>sqlite-jdbc</artifactId>
 			<version>3.7.2</version>
 		</dependency>
-
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
