--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.scort.terminal</groupId>
 	<artifactId>dm3270</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<scm>
 		<connection>scm:git:https://github.com:Neticoa/dm3270.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com:Neticoa/dm3270.git</developerConnection>
 		<url>https://github.com:Neticoa/dm3270</url>
-		<tag>dm3270-1.0.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 	<dependencies>
 		<dependency>
