--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
 	<artifactId>dm3270</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<scm>
-		<connection>scm:git:https://github.com:Neticoa/dm3270.git</connection>
-		<developerConnection>scm:git:ssh://git@github.com:Neticoa/dm3270.git</developerConnection>
-		<url>https://github.com:Neticoa/dm3270</url>
+		<connection>scm:git:https://github.com/Neticoa/dm3270.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/Neticoa/dm3270.git</developerConnection>
+		<url>https://github.com/Neticoa/dm3270</url>
 		<tag>HEAD</tag>
 	</scm>
 	<dependencies>
